NHL Roster heading readability fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ ui-dropdown-panel .ui-dropdown-items-wrapper {
 }
 
 .NHL {
-  background-color: #31450c;
-  color: #000000;
+  background-color: black;
+  color: silver;
   padding: .5em;
 }
